# lq-smol-1

./: README.md  mods.db  smol1.ipynb  time.txt
PUSY/pus1/: README.MD  h1.py
TUTO/: README.MD
TUTO/aigradio1/: README.md  initz.sh  panty.py  pyproject.toml
TUTO/asy1/: initz.sh  panty.py  pyproject.toml
TUTO/asy1/src/: s1.py
TUTO/gau1/: README.md  initz.sh  panty.py  pyproject.toml
TUTO/gau1/rez/: my_file_2025-01-18_09-47-00.md  my_file_2025-01-18_09-55-25.md  my_file_2025-01-18_09-57-30.md  my_file_2025-01-18_11-11-10.md  my_file_2025-01-18_11-17-45.md  transcribez_2025-01-18_09-59-49.md  transcribez_2025-01-18_10-04-14.md  transcribez_2025-01-18_10-05-40.md  transcribez_2025-01-18_10-38-50.md  uploaded_files.txt
TUTO/gau1/src/: g1.py  g2.py  g3.py
TUTO/ghmo/: README.md  panty.py  pyproject.toml
TUTO/ghmo/jsz/: README.md  bun.lockb  index.ts  output${dateTime}.txt  package.json
TUTO/gra1/: README.md  initz.sh  panty.py  pyproject.toml
TUTO/gra1/src/: g1.py
TUTO/kokoroTTS/: bashscript.sh
TUTO/kokoroTTS/t1/: README.md  bun.lockb  index.ts  package.json  run.sh
TUTO/lobech1/: README.MD
TUTO/mar1/: panty.py  pyproject.toml
WO/: README.MD
WO/AUTOGEN/agen1/: panty.py
WO/CREWAI/: README.MD  initz.sh
WO/CREWAI/c1/: initz.sh  panty.py  pyproject.toml  report.md
WO/CREWAI/c1/pus1/: README.md  pyproject.toml
WO/CREWAI/c1/pus1/src/pus1/: crew.py  main.py
WO/CREWAI/c1/src/: utils.py
WO/CREWAI/c2/: README.md  initz.sh  panty.py  pu1report.md  pyproject.toml  report.md
WO/CREWAI/c2/pu1/: README.md  pyproject.toml
WO/CREWAI/c2/pu1/src/pu1/: crew.py  main.py
WO/CREWAI/c2/pu1/src/pu1/config/: agents.yaml
WO/CREWAI/c2/pu2/: README.md  pyproject.toml
WO/CREWAI/c2/pu2/src/pu2/: crew.py  main.py
WO/CREWAI/c2/results/: pu2report.md
WO/CREWAI/c3/: initz.sh  panty.py  pyproject.toml
WO/CREWAI/c3/crewz/grew2/: README.md  pyproject.toml
WO/CREWAI/c3/crewz/grew2/knowledge/: user_preference.txt
WO/CREWAI/c3/crewz/grew2/src/grew2/: crew.py  main.py
WO/CREWAI/c3/crewz/grew2/src/grew2/config/: agents.yaml  tasks.yaml
WO/CREWAI/c3/grew1/: README.md  pyproject.toml
WO/CREWAI/c3/grew1/src/grew1/: crew.py  main.py
WO/CREWAI/c3/grew1/src/grew1/config/: agents.yaml
WO/CREWAI/c3/rez/: grew1_report.md  grew2_report.md  report.md
WO/CREWAI/pro1/: README.md  initz.sh  panty.py  poem.txt  pyproject.toml
WO/CREWAI/pro1/crz/p1/: README.md  pyproject.toml
WO/CREWAI/pro1/crz/p1/knowledge/: user_preference.txt
WO/CREWAI/pro1/crz/p1/src/p1/: crew.py  main.py
WO/CREWAI/pro1/crz/p1/src/p1/config/: agents.yaml  tasks.yaml
WO/CREWAI/pro2/: README.md  hello.py  initz.sh  panty.py  pyproject.toml
WO/CREWAI/pro3/: README.md  hello.py  initz.sh  panty.py  pyproject.toml
WO/LITELLM/: README.MD
WO/LITELLM/l1/: PantyResponse.txt  README.md  initz.sh  panty.py  print(heh)  pyproject.toml
WO/SMOLAGENTS/v1/: panty.py
WO/agen1/: README.md  hello.py  panty.py  pyproject.toml  run.sh
WO/c1/: README.md  pyproject.toml
WO/c1/src/: utils.py
WO/sqlite3Install/sqlite-autoconf-3470200/: Makefile  config.status  libsqlite3.la  libtool  sqlite3.pc
WO/v1/: m1.py  panty.py  pyproject.toml
(+24 files in other folders)
