[project]
name = "pus1"
version = "0.1.0"
description = "pus1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
pus1 = "pus1.main:run"
run_crew = "pus1.main:run"
train = "pus1.main:train"
replay = "pus1.main:replay"
test = "pus1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
