[project]
name = "pu1"
version = "0.1.0"
description = "pu1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
pu1 = "pu1.main:run"
run_crew = "pu1.main:run"
train = "pu1.main:train"
replay = "pu1.main:replay"
test = "pu1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
