[project]
name = "pu2"
version = "0.1.0"
description = "pu2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
pu2 = "pu2.main:run"
run_crew = "pu2.main:run"
train = "pu2.main:train"
replay = "pu2.main:replay"
test = "pu2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
