[project]
name = "grew1"
version = "0.1.0"
description = "grew1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
grew1 = "grew1.main:run"
run_crew = "grew1.main:run"
train = "grew1.main:train"
replay = "grew1.main:replay"
test = "grew1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
