[project]
name = "p1"
version = "0.1.0"
description = "p1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
p1 = "p1.main:run"
run_crew = "p1.main:run"
train = "p1.main:train"
replay = "p1.main:replay"
test = "p1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
